Get hotel by id